--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -1,6 +1,15 @@
+body {
+	font-family: Bungee Hairline;
+}
+
 h1 {
-	color: blue;
-	font-size: 36px;
+	font-family: "Bungee Hairline";
+	color: #ffffff;
+	font-size: 50px;
+	text-align: left;
+	padding-left: 40px;
+	margin-top: 35px;
+	background: #a80707;
 }
 
 textarea {
@@ -9,6 +18,7 @@ textarea {
 }
 
 #submit-this {
+	background-color: #dedede;
 	border-style: solid;
 	border-color: black;
 }
