added google fonts link

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -1,10 +1,10 @@
 body {
-	font-family: "Bungee Hairline";
+	font-family: 'Bungee Hairline', cursive;
 	background: #000000;
 }
 
 h1 {
-	font-family: "Bungee Hairline";
+	font-family: 'Bungee Hairline', cursive;
 	color: #000000;
 	font-size: 65px;
 	text-align: left;
